# E2E-ML

./: .gitignore  README.md  example.db  main.py  pyproject.toml
baseline/: ada.py  bag.py  cb.py  cnn.py  dectree.py  dnn.py  gaussian.py  gboost.py  knear.py  lgb.py  log.py  ranfor.py  rnn.py  stack.py  svc.py  vot.py  xgb.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: feat_scale.py
trials/models/: gauss.py  knn.py  logreg.py  rf.py  supvc.py
