[project]
name = "e2e-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "fastapi[standard]>=0.116.1",
    "imbalanced-learn>=0.14.0",
    "lightgbm[scikit-learn]>=4.6.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.1",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
    "pandas>=2.3.2",
    "pip>=25.2",
    "polars>=1.33.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "xgboost>=3.0.5",
]
